fix: top-align footer icons

--- a/dev-web/src/index.css
+++ b/dev-web/src/index.css
@@ -66,4 +66,8 @@ footer {
   font-size: 2rem;
 }
 
+.icon-row svg {
+  vertical-align: top;
+}
+
 
